app/static/css/tracks.css
#trackTable {
  border-radius: 25px;
  color: #5B097D;
  background-color: #fff;
  table-layout: fixed;
}

#trackTable th {
  border: 0px !important;
  text-align: center !important;
}

#trackTable a {
  color: #5B097D;
}

#trackTable td {
  vertical-align: middle;
}

#trackCoverHeader {
  width: 64px;
}

.trackCover {
  margin-left: 15px;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  margin: 7px;
  margin-bottom: 0px;
  object-fit: cover;
}

.detailsLink {
  font-size: 1rem;
  display: block;
}

#trackCol {
  width: 30%;
}

#artistCol {
  width: 17.5%;
}

#releaseDateCol {
  width: 15%;
}

#albumCol {
  width: 25%;
}

#durationCol {
  width: 12.5%;
}

